# Virtual_Machine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ISA.md
examples/: arithmetic.asm  hello.asm  multi_task.asm  subroutine.asm
include/vm/: types.hpp  virtual_machine.hpp
include/vm/assembler/: assembler.hpp  lexer.hpp  parser.hpp
include/vm/cpu/: cpu_context.hpp  register_file.hpp  virtual_cpu_core.hpp
include/vm/debug/: i_execution_tracer.hpp  stdout_tracer.hpp
include/vm/isa/: encode.hpp  i_instruction_handler.hpp  instruction.hpp  instruction_helpers.hpp  instruction_registry.hpp  opcode_table.hpp
include/vm/isa/handlers/: register_handlers.hpp
include/vm/memory/: i_memory.hpp  physical_memory.hpp  process_memory.hpp
include/vm/os/: i_scheduler.hpp  preemptive_scheduler.hpp  program_loader.hpp  syscall_handler.hpp  virtual_os.hpp
include/vm/process/: process_control_block.hpp  process_state.hpp  process_table.hpp
src/vm/: types.cpp  virtual_machine.cpp
src/vm/assembler/: assembler.cpp  lexer.cpp  parser.cpp
src/vm/cpu/: cpu_context.cpp  register_file.cpp  virtual_cpu_core.cpp
src/vm/debug/: stdout_tracer.cpp
src/vm/isa/: encode.cpp  instruction_helpers.cpp  instruction_registry.cpp  opcode_table.cpp
src/vm/isa/handlers/: arithmetic_handlers.cpp  control_handlers.cpp  jump_handlers.cpp  logic_handlers.cpp  memory_handlers.cpp  stack_handlers.cpp
src/vm/memory/: physical_memory.cpp  process_memory.cpp
src/vm/os/: preemptive_scheduler.cpp  program_loader.cpp  syscall_handler.cpp  virtual_os.cpp
src/vm/process/: process_control_block.cpp  process_table.cpp
tests/: assembler_test.cpp  instruction_test.cpp  integration_test.cpp  memory_test.cpp  register_test.cpp  scheduler_test.cpp  syscall_test.cpp  trace_test.cpp
